# rust-ai-defi

./: Cargo.toml  README.md  dfx.json  package.json  run_tests.sh  tsconfig.json
src/ai_service_proxy/: Cargo.toml  ai_service_proxy.did
src/ai_service_proxy/src/: lib.rs  types.rs
src/defi_pool_backend/: Cargo.toml  defi_pool_backend.did  run_tests.sh
src/defi_pool_backend/src/: lib.rs  types.rs
src/dip20_icp_token/: Cargo.toml  dip20_icp_token.did
src/dip20_icp_token/src/: lib.rs  types.rs
