# =========================
# Package Metadata
# =========================
[package]
name = "ai_service_proxy"          # Name of the crate/canister
version = "0.1.0"
edition = "2021"

# =========================
# Library Configuration
# =========================
[lib]
crate-type = ["cdylib"]      # IC canisters must build as cdylib

# =========================
# Dependencies
# =========================
[dependencies]

# Candid serialization for IC canisters
candid = "0.10"
num-traits = "0.2"

# Core IC development kit
ic-cdk = "0.18"
ic-cdk-macros = "0.18"

# Timer utilities (for async, retries, scheduled polling)
ic-cdk-timers = "0.12"

# Serde for JSON parsing (needed since proxy deals with Flask API JSON)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For stable state initialization
once_cell = "1.21"
